--- a/style.css
+++ b/style.css
@@ -3,3 +3,76 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.website {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+    padding: 50px 0;
+}
+
+.boards {
+    display: flex;
+    width: 100%;
+}
+
+.boards_item {
+    display: flex;
+    flex-direction: column;
+    align-self: baseline;
+    max-width: 250px;
+    width: 100%;
+    background: rgba(0, 0, 0, .5);
+    margin: 0 15px;
+    padding: 10px;
+    transition: .3s all ease;
+    border-radius: 3px;
+}
+
+.list {
+    min-height: 40px;
+}
+
+.list_item {
+    background: #fefefe;
+    border-radius: 3px;
+    padding: 10px;
+    text-align: center;
+    margin: 4px 0;
+    cursor: pointer;
+    font-weight: 400;
+    outline: auto;
+    border: none;
+
+}
+
+.form {
+    border-radius: 3px;
+    margin-top: auto;
+}
+
+.textarea {
+    width: 100%;
+    resize: none;
+    height: 60px;
+    border-radius: 3px;
+    background: white;
+    padding: 10px;
+}
+
+.textarea:focus {
+    outline: none;
+}
+
+.title {
+    padding: 5px;
+}
+
+.title:focus {
+    outline: 1px solid rgba(168, 168, 168, .45);
+}
+
+.buttons {
+    display: flex;
+}
