--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
 }
 
 .website {
@@ -28,6 +32,7 @@
     padding: 10px;
     transition: .3s all ease;
     border-radius: 3px;
+    outline: none;
 }
 
 .list {
@@ -42,7 +47,7 @@
     margin: 4px 0;
     cursor: pointer;
     font-weight: 400;
-    outline: auto;
+    outline: none;
     border: none;
 
 }
@@ -50,6 +55,7 @@
 .form {
     border-radius: 3px;
     margin-top: auto;
+    display: none;
 }
 
 .textarea {
@@ -66,6 +72,7 @@
 }
 
 .title {
+    color: white;
     padding: 5px;
 }
 
@@ -75,4 +82,64 @@
 
 .buttons {
     display: flex;
+}
+
+.add_item-btn {
+    background: green;
+    border: none;
+    height: 35px;
+    width: 100%;
+    cursor: pointer;
+    color: white;
+    border-radius: 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
+}
+
+.cancel_item-btn {
+    padding: 0 10px;
+    background: red;
+    border: none;
+    height: 35px;
+    width: 75px;
+    cursor: pointer;
+    color: white;
+    border-radius: 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    flex-shrink: 0;
+}
+
+.add_btn {
+    height: 30px;
+    background: rgba(155, 155, 155, .3);
+    border-radius: 3px;
+    margin-top: 5px;
+    display: flex;
+    align-items: center;
+    font-size: 12;
+    align-items: center;
+    padding-left: 10px;
+    color: white;
+}
+
+.button {
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: green;
+    border: none;
+    width: 150px;
+    cursor: pointer;
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
+    transform: translate(-50%);
+    color: white;
+    border-radius: 3px;
 }
