--- a/style.css
+++ b/style.css
@@ -1,146 +1,145 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-    font-size: 16px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
 }
 
 .website {
-    display: flex;
-    flex-direction: column;
-    width: 100vw;
-    height: 100vh;
-    padding: 50px 0;
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  padding: 50px 0;
 }
 
 .boards {
-    display: flex;
-    width: 100%;
+  display: flex;
+  width: 100%;
 }
 
 .boards_item {
-    display: flex;
-    flex-direction: column;
-    align-self: baseline;
-    max-width: 250px;
-    width: 100%;
-    background: rgba(0, 0, 0, .5);
-    margin: 0 15px;
-    padding: 10px;
-    transition: .3s all ease;
-    border-radius: 3px;
-    outline: none;
+  display: flex;
+  flex-direction: column;
+  align-self: baseline;
+  max-width: 250px;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  margin: 0 15px;
+  padding: 10px;
+  transition: 0.3s all ease;
+  border-radius: 3px;
+  outline: none;
 }
 
 .list {
-    min-height: 40px;
+  min-height: 40px;
 }
 
 .list_item {
-    background: #fefefe;
-    border-radius: 3px;
-    padding: 10px;
-    text-align: center;
-    margin: 4px 0;
-    cursor: pointer;
-    font-weight: 400;
-    outline: none;
-    border: none;
-
+  background: #fefefe;
+  border-radius: 3px;
+  padding: 10px;
+  text-align: center;
+  margin: 4px 0;
+  cursor: pointer;
+  font-weight: 400;
+  outline: none;
+  border: none;
 }
 
 .form {
-    border-radius: 3px;
-    margin-top: auto;
-    display: none;
+  border-radius: 3px;
+  margin-top: auto;
+  display: none;
 }
 
 .textarea {
-    width: 100%;
-    resize: none;
-    height: 60px;
-    border-radius: 3px;
-    background: white;
-    padding: 10px;
+  width: 100%;
+  resize: none;
+  height: 60px;
+  border-radius: 3px;
+  background: white;
+  padding: 10px;
 }
 
 .textarea:focus {
-    outline: none;
+  outline: none;
 }
 
 .title {
-    color: white;
-    padding: 5px;
+  color: white;
+  padding: 5px;
 }
 
 .title:focus {
-    outline: 1px solid rgba(168, 168, 168, .45);
+  outline: 1px solid rgba(168, 168, 168, 0.45);
 }
 
 .buttons {
-    display: flex;
+  display: flex;
 }
 
 .add_item-btn {
-    background: green;
-    border: none;
-    height: 35px;
-    width: 100%;
-    cursor: pointer;
-    color: white;
-    border-radius: 3px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 10px;
+  background: green;
+  border: none;
+  height: 35px;
+  width: 100%;
+  cursor: pointer;
+  color: white;
+  border-radius: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
 }
 
 .cancel_item-btn {
-    padding: 0 10px;
-    background: red;
-    border: none;
-    height: 35px;
-    width: 75px;
-    cursor: pointer;
-    color: white;
-    border-radius: 3px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    flex-shrink: 0;
+  padding: 0 10px;
+  background: red;
+  border: none;
+  height: 35px;
+  width: 75px;
+  cursor: pointer;
+  color: white;
+  border-radius: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  flex-shrink: 0;
 }
 
 .add_btn {
-    height: 30px;
-    background: rgba(155, 155, 155, .3);
-    border-radius: 3px;
-    margin-top: 5px;
-    display: flex;
-    align-items: center;
-    font-size: 12;
-    align-items: center;
-    padding-left: 10px;
-    color: white;
-    cursor: pointer;
+  height: 30px;
+  background: rgba(155, 155, 155, 0.3);
+  border-radius: 3px;
+  margin-top: 5px;
+  display: flex;
+  align-items: center;
+  font-size: 12;
+  align-items: center;
+  padding-left: 10px;
+  color: white;
+  cursor: pointer;
 }
 
 .button {
-    height: 35px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: green;
-    border: none;
-    width: 150px;
-    cursor: pointer;
-    position: absolute;
-    bottom: 50px;
-    left: 50%;
-    transform: translate(-50%);
-    color: white;
-    border-radius: 3px;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: green;
+  border: none;
+  width: 150px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 50px;
+  left: 50%;
+  transform: translate(-50%);
+  color: white;
+  border-radius: 3px;
 }
