--- a/style.css
+++ b/style.css
@@ -25,9 +25,9 @@
   display: flex;
   flex-direction: column;
   align-self: baseline;
-  max-width: 250px;
+  max-width: 350px;
   width: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.3);
   margin: 0 15px;
   padding: 10px;
   transition: 0.3s all ease;
@@ -72,6 +72,7 @@
 
 .title {
   color: white;
+  font-size: 24px;
   padding: 5px;
 }
 
@@ -115,7 +116,7 @@
 
 .add_btn {
   height: 30px;
-  background: rgba(155, 155, 155, 0.3);
+  background: rgba(155, 155, 155, 0.5);
   border-radius: 3px;
   margin-top: 5px;
   display: flex;
